Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9129

deadlock in direct IO

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      ll_writepages() should ignore layout change otherwise it would cause deadlock in direct IO. This is because ll_writepages() would be called inside the direct IO context and if the layout has been changed during this time, the layout_conf() has to wait for active IO to complete before applying the layout change.

      Patch is coming soon.

            jay Jinshan Xiong (Inactive)
            jay Jinshan Xiong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: